<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_id2"
        tools:context=".RegistroActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:ems="10"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/boton_nuevo_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nombrecompletoRegistro"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:id="@+id/tip_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tip_registro"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.362"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.517" />

    <TextView
            android:id="@+id/name_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_tip"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498" />

    <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contrasenya_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_entry"
            app:layout_constraintVertical_bias="0.289" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_entry_inputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:ems="10"
            android:hint="@string/email_tip"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/boton_nuevo_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_entry"
            app:layout_constraintVertical_bias="0.3" >
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/email_Registro"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/contrasenya_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasenya_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contrasenya_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_entry_inputlayout"
            app:layout_constraintVertical_bias="0.421" />

    <Button
            android:id="@+id/boton_nuevo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginBottom="40dp"
            android:text="@string/boton_nuevo_usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasenya_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:ems="10"
            android:hint="@string/name_tip"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_entry_inputlayout"
            app:layout_constraintBottom_toTopOf="@+id/boton_nuevo_usuario">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nombreusuarioRegistro"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:inputType="textPersonName"
            android:hint="@string/contrasenya_tip"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenya_entry"
            app:layout_constraintBottom_toTopOf="@+id/boton_nuevo_usuario">
        <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                 android:layout_height="match_parent"
                                                                 android:id="@+id/contrasenya_Registro"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>